fix: fixed the whitespace for results when nothing is selected

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -26,8 +26,15 @@ footer{
 }
 
 .newsContainer {
-    display:grid;
-    grid-template-rows: repeat(12, 300px);
+    display:grid none;
+    grid-template-rows: repeat(12, 400px);
+
+    img{
+        background-size: cover;
+        width: 310px;
+        height: 250px;
+        
+    }
 }
 
 
@@ -48,7 +55,7 @@ footer{
 
     .newsContainer {
         grid-template-columns: repeat(3, minmax(310px,100px));
-        grid-template-rows: repeat(4, 300px);
+        grid-template-rows: repeat(4, 400px);
     }
     
 }
@@ -68,6 +75,6 @@ footer{
     }
     .newsContainer{
         grid-template-columns: repeat(4, minmax(310px,100px));
-        grid-template-rows: repeat(3, 300px);
+        grid-template-rows: repeat(3, 400px);
     }
 }
